--- a/src/index.css
+++ b/src/index.css
@@ -60,19 +60,16 @@ body {
   @apply bg-neutral-900 text-white;
 }
 
-/* Enhanced Blob Animation */
+/* Blob Animation */
 @keyframes blob {
     0% {
         transform: translate(0px, 0px) scale(1);
     }
-    25% {
-        transform: translate(50px, -50px) scale(1.2);
+    33% {
+        transform: translate(30px, -50px) scale(1.1);
     }
-    50% {
-        transform: translate(0px, 50px) scale(0.9);
-    }
-    75% {
-        transform: translate(-50px, -25px) scale(1.1);
+    66% {
+        transform: translate(-20px, 20px) scale(0.9);
     }
     100% {
         transform: translate(0px, 0px) scale(1);
@@ -80,7 +77,7 @@ body {
 }
 
 .animate-blob {
-    animation: blob 15s infinite cubic-bezier(0.4, 0, 0.2, 1);
+    animation: blob 7s infinite;
 }
 
 .animation-delay-2000 {
@@ -95,29 +92,27 @@ body {
     animation-delay: 6s;
 }
 
-/* Enhanced Stars Animation */
-@keyframes twinkle {
-    0%, 100% {
-        transform: scale(1);
-        opacity: 0.3;
-    }
-    50% {
-        transform: scale(1.7);
-        opacity: 0.7;
-    }
+/* Stars Animation */
+.stars-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 .star {
     position: absolute;
     background: white;
     border-radius: 50%;
-    box-shadow: 0 0 3px rgba(255, 255, 255, 0.5);
-    animation: twinkle 5s infinite cubic-bezier(0.4, 0, 0.2, 1);
+    animation: twinkle 5s infinite ease-in-out;
 }
 
-/* Stars Animation */
-.stars-container {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+@keyframes twinkle {
+    0%, 100% {
+        transform: scale(1);
+        opacity: 0.3;
+    }
+    50% {
+        transform: scale(1.5);
+        opacity: 0.5;
+    }
 }
